<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.drams.daylillywishlistapp.NameNewWishList">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/wish_list_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/Create_New_Button"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="110dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="110dp" />
</android.support.constraint.ConstraintLayout>
